--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@payloadcms/richtext-lexical": "^3.11.0",
     "graphql": "^16.10.0",
     "next": "15.1.2",
+    "next-safe-action": "^7.10.2",
     "payload": "^3.11.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
